--- a/index.html
+++ b/index.html
@@ -41,17 +41,20 @@
 	</div>
 	<div class="app__screenshots-wrapper container-desktop">
 		<div class="app__screenshots-list">
-			<a href="assets/screenshot.png" class="lightbox">
-				<img src="assets/screenshot.png" class="app__screenshot" alt="" />
+			<a href="content/image/f2vwynevmvxdpl5bt06v.png" class="lightbox">
+				<img src="content/image/f2vwynevmvxdpl5bt06v.png" class="app__screenshot" alt="" />
 			</a>
-			<a href="assets/screenshot.png" class="lightbox">
-				<img src="assets/screenshot.png" class="app__screenshot" alt="" />
+			<a href="content/image/32vamvdd07x438wkesc2.png" class="lightbox">
+				<img src="content/image/32vamvdd07x438wkesc2.png" class="app__screenshot" alt="" />
 			</a>
-			<a href="assets/screenshot.png" class="lightbox">
-				<img src="assets/screenshot.png" class="app__screenshot" alt="" />
+			<a href="content/image/s0gsby0b6e8pbso6lrfm.png" class="lightbox">
+				<img src="content/image/s0gsby0b6e8pbso6lrfm.png" class="app__screenshot" alt="" />
 			</a>
-			<a href="assets/screenshot.png" class="lightbox">
-				<img src="assets/screenshot.png" class="app__screenshot" alt="" />
+			<a href="content/image/krbi5gv60ovc5njjhqvp.png" class="lightbox">
+				<img src="content/image/krbi5gv60ovc5njjhqvp.png" class="app__screenshot" alt="" />
+			</a>
+			<a href="content/image/0oki2cfwpq70uovxvit4.png" class="lightbox">
+				<img src="content/image/0oki2cfwpq70uovxvit4.png" class="app__screenshot" alt="" />
 			</a>
 		</div>
 	</div>
@@ -59,13 +62,7 @@
 <section class="app__fulldescription app__section container">
 	<h2 class="app__section-title">Description</h2>
 	<div class="app__fulldescription-content">
-		<p>A more complete description of the mobile app</p>
-<p>With a lot of features:</p>
-<ul>
-<li>Feature 1</li>
-<li>Feature 2</li>
-<li>Feature 3</li>
-</ul>
+		<p>Welcome to Everdale Wiki. a unoficial database for the new Supercell&#39;s mobile game Everdale. In this app, you will find everything you need about the game. The guide covers everything about buildings, items, recipes and more.</p>
 
 	</div>
 </section>
@@ -75,15 +72,13 @@
 				<div class="footer__container">
 					<p class="footer__love">
 						<script>document.write('&copy;' + (new Date()).getFullYear());</script><noscript>&copy;2022</noscript> All rights reserved
-							&mdash; Template by <a href="https://www.sandoche.com" target="_blank">Sandoche</a>
-							&mdash; Powered by <a href="https://t3mpl.n4no.com/" target="_blank" title="T3MPL Editor">T3MPL</a>
 					</p>
 					<ul class="footer__links">
 							<li class="footer__link">
-								<a href="page-1.html">Privacy</a>
+								<a href="page-2.html">Privacy</a>
 							</li>
 							<li class="footer__link">
-								<a href="https://n4no.com/" targe="_blank">GitHub</a>
+								<a href="page-1.html">Terms&amp;Conditions</a>
 							</li>
 					</ul>
 				</div>
