--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 		<h1 class="app__name">Everdale Wiki</h1>
 		<p class="app__description">Welcome to Everdale Wiki, an unofficial guide for the Everdale game</p>
 		<div class="app__buttons app__buttons--desktop">
-			<a href="https://www.apple.com/ios/app-store/" class="app__button-ios" target="_blank" title="Get on Appstore">
+			<a href="https://apps.apple.com/can/app/everdale-wiki/id1604681047" class="app__button-ios" target="_blank" title="Get on Appstore">
 				<img src="assets/ios-badge.svg" alt="Get on Appstore">
 			</a>
 		</div>
 	</div>
 </header>
 <div class="app__buttons app__buttons--mobile container">
-	<a href="https://www.apple.com/ios/app-store/" class="app__button-ios" target="_blank" title="Get on Appstore">
+	<a href="https://apps.apple.com/can/app/everdale-wiki/id1604681047" class="app__button-ios" target="_blank" title="Get on Appstore">
 		<img src="assets/ios-badge.svg" alt="Get on Appstore">
 	</a>
 </div>
